[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/Levels/TheoryTemplate.gd" type="Script" id=1]
[ext_resource path="res://Game/Backgrounds/RandomBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Fonts/Nokia/nokia.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/Buttons/Arrow/Arrow3.png" type="Texture" id=4]
[ext_resource path="res://Game/Buttons/Arrow/Arrow2.png" type="Texture" id=5]
[ext_resource path="res://Game/Buttons/Commons/Back.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/RPGElements/Nodes/RPGDialog.gd" type="Script" id=7]
[ext_resource path="res://addons/RPGElements/Icons/RPGDialog.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=3]

resource_name = "finish"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Top:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -96 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bottom:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 512 ), Vector2( 0, 736 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Top:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 0, -80 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bottom:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 512 ) ]
}

[node name="TheoryTemplate" type="Node" index="0"]
script = ExtResource( 1 )

[node name="RandomBackground" parent="." index="0" instance=ExtResource( 2 )]
show_behind_parent = true
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Transform", "Visibility", "Z Index" ]

[node name="Top" type="ColorRect" parent="." index="1"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -96.0
margin_right = 1280.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="Top" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Pedro"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Bottom" type="ColorRect" parent="." index="2"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 736.0
margin_right = 1280.0
margin_bottom = 944.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_group_": true
}

[node name="Text" type="Label" parent="Bottom" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 176.0
margin_right = 1120.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Lorem"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Next" type="TextureButton" parent="Bottom" index="1"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1152.0
margin_top = 48.0
margin_right = 1352.0
margin_bottom = 248.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="Back" parent="Bottom" index="2" instance=ExtResource( 6 )]
margin_left = 32.0
margin_top = 48.0
margin_right = 157.0
margin_bottom = 173.0

[node name="RPGDialog" type="Node" parent="." index="3"]
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}
debug = false

[node name="Curtain" type="ColorRect" parent="." index="4"]
self_modulate = Color( 0.96875, 0.96875, 0.96875, 0.03125 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="Anim" type="AnimationPlayer" parent="." index="5"]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/finish = SubResource( 3 )
anims/show = SubResource( 4 )
blend_times = [  ]

[node name="ButtonDelay" type="Timer" parent="." index="6"]
process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="pressed" from="Bottom/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Bottom/Back" to="." method="_on_Back_pressed"]
[connection signal="changed_transmitter_name" from="RPGDialog" to="." method="_on_RPGDialog_changed_transmitter_name"]
[connection signal="end_dialog" from="RPGDialog" to="." method="_on_RPGDialog_end_dialog"]
[connection signal="start_dialog" from="RPGDialog" to="." method="_on_RPGDialog_start_dialog"]
[connection signal="updated_text" from="RPGDialog" to="." method="_on_RPGDialog_updated_text"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="timeout" from="ButtonDelay" to="." method="_on_ButtonDelay_timeout"]
